expert style changes

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -100,18 +100,18 @@
 
                         <li>
 
-                          <select id="year_select" class="left selectpicker show-tick" data-width="20%" data-style="btn-more" data-live-search="true" data-size="15">
+                          <select id="year_select" class="left selectpicker show-tick" data-width="20%" data-style="btn-more" data-live-search="false" data-size="15">
                                 <option value="all">{% trans 'All years' %}</option>
                                 <option value="2015">2015</option>
                                 <option value="2014">2014</option>
                         </select>
-                 
+
                         </li>
 
 
                                                 <li>
                      <form class="navbar-search pull-left">
-                          <select id="reports_per_page_select" class="left selectpicker show-tick" data-width="20%" data-style="btn-more" data-live-search="true" data-size="15">
+                          <select id="reports_per_page_select" class="left selectpicker show-tick" data-width="20%" data-style="btn-more" data-live-search="false" data-size="15">
                                 <option value="all">{% trans 'All years' %}</option>
                                 <option value="2015">2015</option>
                                 <option value="2014">2014</option>
