--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -256,7 +256,7 @@
 
 
     <div id="filters_div"
-         style="display:none;position:absolute;top:30px;left:30px; background-color: rgba(0,0,0,.6); border:1px solid rgba(0,0,0,.8); border-radius: 5px;">
+         style="display:none;background-color: rgba(0,0,0,.6); border:1px solid rgba(0,0,0,.8); border-radius: 5px;">
         <form role="form">
             <div class="form-group">
                 <label for="year_select">Year:</label>
@@ -361,11 +361,16 @@
 
 
             $("#show_filters_button").click(function () {
-                $("#filters_div").show()
-            }).position({
+                $("#filters_div").show().position({
                 my: "left top",
                 at: "left bottom",
                 of: "#show_filters_button",
+                collision: "fit"
+            });
+            }).position({
+                my: "left top",
+                at: "left bottom",
+                of: "#navbar",
                 collision: "fit"
             });
 
