expert style changes

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -256,7 +256,7 @@
 
 
     <div id="filters_div"
-         style="display:none;background-color: rgba(200,200,200,1); border:1px solid rgba(100,100,100,1); border-radius: 5px; width:50%; margin:5px;">
+         style="position:fixed; display:none;background-color: rgba(200,200,200,1); border:1px solid rgba(100,100,100,1); border-radius: 5px; width:50%; margin:5px;">
         <form role="form">
             <div class="form-group">
                 <label for="year_select">Year:</label>
