expert style changes

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -255,9 +255,8 @@
     </button>
 
 
-    <div id="filters_div"
+        <form role="form" id="filters_div"
          style="position:fixed; display:none;background-color: rgba(200,200,200,1); border:1px solid rgba(100,100,100,1); border-radius: 5px; width:50%; margin:5px;">
-        <form role="form">
             <div class="form-group">
                 <label for="year_select">Year:</label>
                 <select id="year_select" class="left selectpicker show-tick form-control" data-width="20%" data-style="btn-more"
@@ -281,7 +280,6 @@
         </form>
 
 
-    </div>
 
 {% endblock %}
 
