done with working draft of expert validation - now really

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -162,6 +162,8 @@
                                 Scores: {{ form.instance.report.get_n_expert_report_annotations_tiger_certainty }}, Site
                                 Certainty
                                 Scores: {{ form.instance.report.get_n_expert_report_annotations_site_certainty }}
+
+                                {{ form.instance.report.expert_annotation_html }}
                             </div>
                             <div class="col-md-3">
                                 <br>
