done with working draft of expert validation - now really

--- a/tigacrafting/static/tigacrafting/tigacrafting_style.css
+++ b/tigacrafting/static/tigacrafting/tigacrafting_style.css
@@ -61,6 +61,10 @@ textarea{
     width:100%;
 }
 
+.form-inline > * {
+   margin:5px 3px;
+}
+
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
 
