--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -322,7 +322,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="flagged_select">Flagged Status:</label>
+                <label for="flagged_select">Flagged By Me:</label>
                 <select id="flagged_select" class="left selectpicker show-tick form-control" data-width="90%"
                         data-style="btn-more"
                         data-live-search="false" data-size="15">
@@ -332,7 +332,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="flagged_others_select">Flagged Status:</label>
+                <label for="flagged_others_select">Flagged By Others:</label>
                 <select id="flagged_others_select" class="left selectpicker show-tick form-control" data-width="90%"
                         data-style="btn-more"
                         data-live-search="false" data-size="15">
