done with working draft of expert validation - now really

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -456,8 +456,9 @@
                 }
             })
 
-            $("#other_annotations_alert" + ref_id).hide()
-                  function show_other_annotations(ano_id){
+            $(".alert" + ref_id).hide();
+
+     function show_other_annotations(ano_id){
         $("#other_annotations_alert" + ref_id).show();
     }
 
