done with working draft of expert validation - now really

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -456,7 +456,7 @@
                 }
             })
 
-            $(".alert" + ref_id).hide();
+            $(".alert").hide();
 
      function show_other_annotations(ano_id){
         $("#other_annotations_alert" + ref_id).show();
