--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -164,7 +164,7 @@
                                 Scores: {{ form.instance.report.get_n_expert_report_annotations_site_certainty }}
 
                                 <div id='other_annotations_alert{{ form.instance.id }}' class='alert alert-info .alert-dismissable' role='alert'><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                                    {{ form.instance.get_others_annotation_html }}
+                                    {{ form.instance.get_others_annotation_html | safe }}
                                 </div>
 
                                 {% if form.instance.report.expert_report_annotations.count > 1 %}
