--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -163,13 +163,18 @@
                                 Certainty
                                 Scores: {{ form.instance.report.get_n_expert_report_annotations_site_certainty }}
 
-                                <div id='other_annotations_alert{{ form.instance.id }}' class='alert alert-info .alert-dismissable' role='alert'><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                <div id='other_annotations_alert{{ form.instance.id }}'
+                                     class='alert alert-info .alert-dismissable' role='alert'>
+                                    <button type="button" class="close" data-dismiss="alert"
+                                            aria-hidden="true">&times;</button>
                                     {{ form.instance.get_others_annotation_html | safe }}
                                 </div>
 
                                 {% if form.instance.report.expert_report_annotations.count > 1 %}
-                                <button onclick="show_other_annotations({{ form.instance.id }})" class="btn btn-default btn-sm">Show Others' Annotations</button>
-{% endif %}
+                                    <button onclick="show_other_annotations({{ form.instance.id }})"
+                                            class="btn btn-default btn-sm">Show Others' Annotations
+                                    </button>
+                                {% endif %}
 
                             </div>
                             <div class="col-md-3">
@@ -458,9 +463,9 @@
 
             $(".alert").hide();
 
-     function show_other_annotations(ano_id){
-        $("#other_annotations_alert" + ref_id).show();
-    }
+            function show_other_annotations(ano_id) {
+                $("#other_annotations_alert" + ano_id).show();
+            }
 
 
         });
@@ -497,7 +502,6 @@
             qp += "&flagged_others=" + $("#flagged_others_select").val();
             window.location.href = qp;
         })
-
 
 
     </script>
